# all-smi

./: .clippy.toml  .gitignore  API.md  Cargo.toml  DEVELOPERS.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  TESTING.md  all-smi.1  build.rs  docker-compose-test.yml  docker-compose.test.yml  hosts.csv  metrics  start-mock-cluster.sh  stress_test_cpu.sh  test-150-nodes.sh  test_cleanup.sh  test_container_cpu.sh  test_cpu_freq_container.sh  test_powermetrics_cleanup.sh  test_template.rs
.github/actions/setup-protoc/: action.yml
.github/workflows/: build.yml  ci.yml  debian_build.yml  debian_package.yml  launchpad_ppa.yml  release.yml  update_homebrew_formula.yml
debian/: README.packaging  README_PPA.md  changelog  control  control.binary  control.source  copyright  get-next-ppa-version.sh  manpages  prepare-source-package.sh  rules  rules.binary  rules.launchpad  rules.launchpad-simple  rules.source  update-changelog.sh
debian/source/: include-binaries
docs/: AI_DEVELOPMENT_STORY.md  ARCHITECTURE.md  Devlog-Tenstorrent.md  LIB_mode.md  PR61_REVIEW.md
docs/man/: all-smi.1
examples/: docker-compose.yml  library_usage.rs
examples/prometheus/: test.yml
examples/sidecar-approach/: rbln-sidecar.yaml
proto/: tpu_metric_service.proto
scripts/: insert_apache_header.py  vendor_all_luwen.sh
src/: app_state.rs  cli.rs  client.rs  error.rs  lib.rs  main.rs  main_backup.rs  prelude.rs
src/api/: handlers.rs  mod.rs  server.rs
src/api/metrics/: chassis.rs  cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  npu.rs  process.rs  runtime.rs
src/api/metrics/npu/: common.rs  exporter_trait.rs  furiosa.rs  gaudi.rs  google_tpu.rs  mod.rs  rebellions.rs  tenstorrent.rs
src/common/: config.rs  error_handling.rs  mod.rs  progress_bar.rs
src/device/: apple_silicon.rs  container_info.rs  container_utils.rs  cpu_linux.rs  cpu_macos.rs  cpu_windows.rs  furiosa.rs  memory_linux.rs  memory_macos.rs  memory_windows.rs  mod.rs  mod_new.rs  nvidia.rs  nvidia_jetson.rs  platform_detection.rs  powermetrics_manager.rs  powermetrics_parser.rs  process_list.rs  process_utils.rs  reader_factory.rs  rebellions.rs  tenstorrent.rs  traits.rs  types.rs
src/device/common/: command_executor.rs  constants.rs  error_handling.rs  json_parser.rs  mod.rs  parsers.rs  validation.rs
src/device/container_info/: tests.rs
src/device/cpu_linux/: tests.rs
src/device/hlsmi/: collector.rs  config.rs  manager.rs  mod.rs  parser.rs  process.rs  store.rs
src/device/macos_native/: ioreport.rs  manager.rs  metrics.rs  mod.rs  smc.rs  thermal.rs
src/device/memory_linux/: tests.rs
src/device/powermetrics/: collector.rs  config.rs  manager.rs  mod.rs  process.rs  store.rs
src/device/readers/: amd.rs  amd_windows.rs  apple_silicon.rs  apple_silicon_native.rs  common_cache.rs  furiosa.rs  gaudi.rs  google_tpu.rs  mod.rs  nvidia.rs  nvidia_jetson.rs  rebellions.rs  tenstorrent.rs  tpu_grpc.rs  tpu_info_runner.rs  tpu_pjrt.rs  tpu_sysfs.rs
src/device/readers/chassis/: apple_silicon.rs  apple_silicon_native.rs  generic.rs  mod.rs
src/device/windows_temp/: acpi_thermal.rs  amd_ryzen.rs  intel_wmi.rs  libre_hwmon.rs  mod.rs
src/gpu/: apple_silicon.rs  cpu_linux.rs  cpu_macos.rs  memory_linux.rs  memory_macos.rs  mod.rs  nvidia.rs  nvidia_jetson.rs
src/metrics/: aggregator.rs  coordinator.rs  mod.rs
src/mock/: args.rs  constants.rs  generator.rs  mod.rs  node.rs  server.rs  template.rs  template_engine.rs
src/mock/metrics/: cpu.rs  gpu.rs  memory.rs  mod.rs  types.rs
src/mock/templates/: amd_gpu.rs  apple_silicon.rs  common.rs  disk.rs  furiosa.rs  gaudi.rs  jetson.rs  mod.rs  nvidia.rs  rebellions.rs  tenstorrent.rs
src/network/: client.rs  metrics_parser.rs  mod.rs
src/parsing/: common.rs  macros.rs  mod.rs
src/storage/: info.rs  mod.rs  reader.rs
src/traits/: collector.rs  exporter.rs  mock_generator.rs  mod.rs  renderer.rs
src/ui/: buffer.rs  chrome.rs  constants.rs  dashboard.rs  device_renderers.rs  help.rs  layout.rs  mod.rs  notification.rs  process_renderer.rs  renderer.rs  tabs.rs  text.rs  widgets.rs
src/ui/renderers/: chassis_renderer.rs  cpu_renderer.rs  gpu_renderer.rs  memory_renderer.rs  mod.rs  storage_renderer.rs  test_utils.rs
src/ui/renderers/widgets/: gauges.rs  mod.rs  tables.rs
src/utils/: command_timeout.rs  disk.rs  disk_filter.rs  mod.rs  profiling.rs  runtime_environment.rs  system.rs  test_helpers.rs  units.rs
src/view/: data_collector.rs  event_handler.rs  mod.rs  runner.rs  runner_new.rs  terminal_manager.rs  ui_loop.rs
src/view/data_collection/: aggregator.rs  local_collector.rs  mod.rs  remote_collector.rs  strategy.rs
tasks/: CODE_REFACTOR_REVIEW.md  REFACTOR_TODO.md
tests/: Makefile  check-arm-cpuinfo.sh  check-container-lifecycle.sh  container-benchmark.sh  container-build-test.sh  container-cpu-test.sh  container-debug.sh  container-direct-test.sh  container-memory-simple-test.sh  container-memory-test.sh  container-metrics-test.sh  container-simple-test.sh  container_cpu_test.rs  container_integration_test.rs  cpu_model_test.rs  debug-cargo-build.sh  debug-container-cpu-frequency.sh  debug-container-status.sh  debug-memory.sh  device_tests.rs  library_api_test.rs  memory-allocation-test.sh  memory-leak-test.sh  quick-api-test.sh  test-arm-cpu-frequency.sh  test-container-cpu-frequency-simple.sh  test-container-cpu-frequency.sh  test-container-memory-limits.sh  test-minimal-cargo.sh  test-powermetrics-cleanup.sh  test_backend_ai_env.sh  test_tpu_jax.py  verify-arm-frequency.sh
