[package]
name = "all-smi"
version = "0.3.4"
description = "Command-line utility for monitoring GPU hardware. It provides a real-time view of GPU utilization, memory usage, temperature, power consumption, and other metrics."
license = "MIT OR Apache-2.0"
repository = "https://github.com/inureyes/all-smi"
readme = "README.md"
keywords = ["cli", "rust"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
crossterm = "0.29.0"
clap = { version = "4.5.4", features = ["derive"] }
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
sysinfo = "0.35.2"
anyhow = "1.0.86"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
rand = "0.8.5"
futures-util = "0.3.30"
nvml-wrapper = "0.10.0"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.32.0"
objc = "0.2"

[features]
mock = []

[[bin]]
name = "all-smi-mock-server"
path = "src/bin/all-smi-mock-server.rs"
required-features = ["mock"]
