[package]
name = "all-smi"
version = "0.7.2"
description = "Command-line utility for monitoring GPU hardware. It provides a real-time view of GPU utilization, memory usage, temperature, power consumption, and other metrics."
authors = ["Jeongkyu Shin <inureyes@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/inureyes/all-smi"
readme = "README.md"
keywords = ["cli", "rust"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
chrono = "0.4.41"
crossterm = "0.29.0"
clap = { version = "4.5.4", features = ["derive"] }
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.11.1"
sysinfo = "0.36.0"
anyhow = "1.0.86"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
rand = "0.9.1"
futures-util = "0.3.30"
nvml-wrapper = "0.11.0"
lazy_static = "1.5.0"
once_cell = "1.20.2"
libc = "0.2"
whoami = "1.5"
num_cpus = "1.17"
# Tenstorrent dependencies from GitHub
all-smi-luwen-core = "0.2.0"
all-smi-luwen-if = "0.7.9"
all-smi-luwen-ref = "0.7.9"
all-smi-ttkmd-if = "0.2.2"
[target.'cfg(target_os = "linux")'.dependencies]
furiosa-smi-rs = { version = "2025.3.0", optional = true }
cgroups-rs = "0.4.0"

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10.73", features = ["vendored"] }

[target.'cfg(all(target_arch = "aarch64", target_env = "gnu"))'.dependencies]
openssl = { version = "0.10.73", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.32.0"
objc = "0.2"

[dev-dependencies]
tempfile = "3.14"

[features]
mock = []

[lib]
name = "all_smi"
path = "src/lib.rs"

[[bin]]
name = "all-smi"
path = "src/main.rs"

[[bin]]
name = "all-smi-mock-server"
path = "src/bin/all-smi-mock-server.rs"
required-features = ["mock"]
