[package]
name = "all-smi"
version = "0.15.2"
description = "Command-line utility for monitoring GPU hardware. It provides a real-time view of GPU utilization, memory usage, temperature, power consumption, and other metrics."
authors = ["Jeongkyu Shin <inureyes@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/lablup/all-smi"
readme = "README.md"
keywords = ["cli", "rust"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
chrono = "0.4.42"
crossterm = "0.29.0"
clap = { version = "4.5.53", features = ["derive"] }
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
regex = "1.12.2"
sysinfo = "0.37.2"
anyhow = { version = "1.0.100", optional = true }
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.18", features = ["full"] }
rand = "0.9.2"
futures-util = "0.3.31"
nvml-wrapper = "0.11.0"
once_cell = "1.21.3"
libc = "0.2"
whoami = "1.5"
num_cpus = "1.17"
async-trait = "0.1"
thiserror = "2.0"
url = "2.5"
# gRPC for TPU metrics
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
[target.'cfg(target_os = "linux")'.dependencies]
# Tenstorrent dependencies from GitHub
all-smi-luwen-core = "0.2.0"
all-smi-luwen-if = "0.7.9"
all-smi-luwen-ref = "0.7.9"
all-smi-ttkmd-if = "0.2.2"
furiosa-smi-rs = { version = "2025.3.0", optional = true }
cgroups-rs = "0.5.0"
# Dynamic library loading for tpu_pjrt
libloading = "0.9"

# AMD GPU support (glibc only, not compatible with musl static linking)
[target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
libamdgpu_top = "0.11.0"

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10.75", features = ["vendored"] }

[target.'cfg(all(target_arch = "aarch64", target_env = "gnu"))'.dependencies]
openssl = { version = "0.10.75", features = ["vendored"] }

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.18"
libloading = "0.9"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[dev-dependencies]
tempfile = "3.23"

[build-dependencies]
tonic-prost-build = "0.14"

[features]
mock = ["anyhow"]

[lib]
name = "all_smi"
path = "src/lib.rs"

[[bin]]
name = "all-smi"
path = "src/main.rs"

[[bin]]
name = "all-smi-mock-server"
path = "src/bin/all-smi-mock-server.rs"
required-features = ["mock"]

[profile.release]
strip = true          # Remove debug symbols
lto = true            # Link-Time Optimization
codegen-units = 1     # Single codegen unit for better optimization
panic = "abort"       # Abort on panic (removes unwind code)
opt-level = "z"       # Optimize for size

[lints.clippy]
# Enable the same lints that CI uses
uninlined_format_args = "warn"
# Other useful lints
needless_return = "warn"
redundant_closure = "warn"
manual_range_contains = "warn"
module_inception = "warn"
bool_comparison = "warn"

[lints.rust]
# Rust compiler lints
unsafe_code = "allow"  # Required for libc calls in process_list.rs
missing_docs = "allow"
